fixed research anomalies

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.1:
+ - fixed errors in research file, now adding a
+=======
 0.2.0:
  - added animal experiments.
  - Experiment table now has a small cage
@@ -14,7 +17,7 @@
 known bugs:
  - formulas show up multiple times.
  - not sure if thaumcraft or me, the /tc research <player> all freezes the server.
-
+=======
 0.1.1:
 - enchantment effect now renders in first person
 - fixed logs inside plantballs
