--- a/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
+++ b/src/main/resources/assets/thaumic_arcana/lang/en_us.lang
@@ -185,3 +185,4 @@ command.thaumic_arcana.reload.feedback=Thaumic Arcana configs reloaded
 rendering.thaumic_arcana.reload.failed=Failed to reload rendering. Check the console output for details.
 
 commands.thaumic_arcana.spawn_structure.usage=spawnArcanaStructure x y z <structure_name>
+commands.thaumic_arcana.spawn_structure.invalid_name=Invaliid structure name
