--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,19 @@
+0.3.1:
+ - Fixed a bug where forge would crash guis on servers
+ - fixed a bug where the mod would break breeding
+ - enchant selector foci modifiers can not be used
+ - recipes now display on the formulas
+
+======
 0.3.0:
+ - requires forgelin
  - json formula recipes implemented
  - fixed a bug where the mod breaks breeding.
  - added foci effect to turn enchants on and off
  - added foci modifier to select enchants
  - enchant modifiers are now craftable
+
+ foci modifiers are in an experimental status, unlocked with biomancy.
 
 =======
 0.2.1:
